PyAMF Changelog
===============

This file contains information about the changes between the different versions
of PyAMF.

0.4.0 (unreleased)
------------------
 - A revamped google app engine adapter that checks for the _key attribute in
   an aliased class and first loads the object from the datastore and then
   applies that properties in the object stream. (Ticket:307)
 - New helper function to make it easier to manually add adapters (Ticket:350)
 - Python C-extension for the pyamf.util.BufferedByteStream class. Contributed
   by Gerard Escalante (Ticket:225)
 - New API to add headers such as cookies in pyamf.remoting.client (Ticket:337)
 - Now clearing the context between remoting requests (Ticket:309)
 - Fixed issue with AMF3 class definition references (Ticket:341)
 - More helpful description for register_class args check (Ticket:334)
 - pyamf.register_class now checks to ensure that __init__ args do not have
   any arguments (Ticket:322)
 - Added RemoteObject support for AsyncMessage (Ticket:292)
 - Both Encoders will now raise pyamf.EncodeError if a function is encoded
   (Ticket:311)
 - Twisted Gateway would fall over when returning tuples (Ticket:313)
 - The remoting gateways now send a customizable Server header (Ticket:317)
 - The remoting client now sends a customizable User-Agent header (Ticket:306)
 - Added ability to set the HTTP referer in remoting client (Ticket:316)
 - Fixed issue where the AMF3 encoder assumed objects with a 'tag' attribute
   needed XML encoding. Reported by cy-man (Ticket:303)
 - Solved issue with repr for AbstractMessage. Reported by datafunk (Ticket:283)
 - Content-type was missing in POST requests from the AMF client. Reported by
   magog (Ticket:304)
 - Added the disconnect Command operation (Ticket:325)
 - Fixed issue with the unit tests for Django (Ticket:281)
 - Deprecated the NetworkIOMixIn class (Ticket:232)

0.3.1 (2008-05-04)
------------------
 - Importing module now has tests (Ticket:266)